<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/uw_gegevens"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/naam_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_jouw_naam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/geef_uw_naam">

            <requestFocus />
        </android.support.v7.widget.AppCompatEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/voornaam_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_jouw_voornaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/geef_uw_voornaam" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textviewGeboortejaar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/uw_geboortejaar" />

    <Button
        android:id="@+id/btnSelecteerGeboortejaar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/selecteer_jaar" />

    <Button
        android:id="@+id/btnSelecteerHoroscoop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/selecteer_horoscoop" />

    <ImageView
        android:id="@+id/imageViewGeselecteerdeHoroscoop"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/toon_afbeelding_horoscoop" />

</LinearLayout>
