<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/row_padding"
    android:paddingLeft="@dimen/row_padding"
    android:paddingRight="@dimen/row_padding"
    android:paddingTop="@dimen/row_padding"
    >

    <ImageView
        android:id="@+id/imageviewHoroscoop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/horoscoop"
        android:src="@drawable/leeuw" />

    <TextView
        android:id="@+id/textViewNaamHoroscoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageviewHoroscoop"
        android:layout_marginLeft="10dp"
        android:text="@string/naam_horoscoop"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnToonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/toon_info" >
    </Button>

</RelativeLayout>